dts/testData/inspections/container/RootDeleteProperty.dts
<error descr="Not a valid root entry">/delete-property/</error> prop;

prop = "value";